--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "path": "^0.12.7",
     "playwright": "^1.50.0",
     "tree-kill": "^1.2.2"
   }
