--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@playwright/test": "^1.50.1",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "path": "^0.12.7",
-    "playwright": "^1.50.0",
+    "playwright": "^1.50.1",
     "tree-kill": "^1.2.2"
   }
 }
